# example-prometheus-grafana

./: README.org  docker-compose.yml  prometheus.yml
backend/: Dockerfile  pyproject.toml
backend/backend/: backend.py
grafana/dashboards/: example.json
