[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["rafal-dot-el"]

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.15.0"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
